# einops

./: Cargo.toml  README.md
.github/workflows/: ci.yml
einops-macros/: Cargo.toml
einops-macros/src/: einops.rs  lib.rs
einops-macros/src/einops/: parse.rs  tokens.rs
examples/: macro.rs  simple_convnet.rs
src/: backend.rs  error.rs  lib.rs  parse.rs  recipe.rs
src/backend/: tch.rs  torch.rs
src/macro/: Cargo.toml
src/macro/src/: lib.rs
src/recipe/: parse.rs
tests/: einops.rs
