[package]
name = "einops"
version = "0.2.1"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
edition = "2021"
description = "Simplistic API for deep learning tensor operations"
license = "MIT OR Apache-2.0"
keywords = ["deep-learning", "tensor", "tch"]
categories = ["algorithms", "science", "mathematics"]
exclude = [".github/"]
repository = "https://github.com/VasanthakumarV/einops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tch-bindings"]
tch-bindings = ["tch"]

[dependencies]
tch = { version = "0.5", optional = true }
einops-macros = { path = "einops-macros" }

[package.metadata.docs.rs]
no-default-features = true
