[package]
name = "einops"
version = "0.3.0-alpha.1"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
edition = "2021"
description = "Simplistic API for deep learning tensor operations"
license = "MIT OR Apache-2.0"
keywords = ["deep-learning", "tensor", "tch"]
categories = ["algorithms", "science", "mathematics"]
exclude = [".github/"]
repository = "https://github.com/VasanthakumarV/einops"

[features]
default = ["tch-bindings"]
tch-bindings = ["tch"]

[dependencies]
tch = { version = "0.7", optional = true }
einops-macros = { path = "einops-macros", version = "0.1.0-alpha.1" }

[package.metadata.docs.rs]
no-default-features = true
