[package]
name = "einops-macros"
version = "0.1.0-alpha.1"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
edition = "2021"
description = "Simplistic API for deep learning tensor operations"
license = "MIT OR Apache-2.0"
keywords = ["deep-learning", "tensor", "tch"]
categories = ["algorithms", "science", "mathematics"]
exclude = [".github/"]
repository = "https://github.com/VasanthakumarV/einops"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
